# alembic-studie

./: .gitignore  alembic.ini  models.py  pyproject.toml
alembic/versions/: 573d3ce2bda6_campo_senha_tabela_pessoa.py  6a725d99bfe8_table_pessoa_2.py  7b05849750cf_primeira.py  a52a33be842d_alteracao_pessoa_email_50_char.py  d2c11800d3c5_pessoa_2_com_idade.py
