[tool.poetry]
name = "migrations-top"
version = "0.1.0"
description = ""
authors = ["Joao Pedro Watson <joaopedrowatson@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
sqlacodegen = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
